--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    container_name: cleanupapp
+    container_name: cleanup-app
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234!
-      MYSQL_DATABASE: cleanupapp-db
+      MYSQL_DATABASE: cleanup-app-db
       MYSQL_USER: admin
       MYSQL_PASSWORD: 1234!
     ports:
