--- a/src/main/resources/static/sample-tasks.json
+++ b/src/main/resources/static/sample-tasks.json
@@ -2,21 +2,11 @@
   {
     "name": "Setup registration and check-in station",
     "author_id": 1,
-    "assignee_id": ""
+    "assignee_id": 2
   },
   {
     "name": "Distribute cleanup supplies and safety equipment",
     "author_id": 1,
-    "assignee_id": ""
-  },
-  {
-    "name": "Coordinate trash collection and sorting stations",
-    "author_id": 1,
-    "assignee_id": ""
-  },
-  {
-    "name": "Document cleanup progress and take before/after photos",
-    "author_id": 1,
-    "assignee_id": ""
+    "assignee_id": 3
   }
 ]
