--- a/src/main/resources/static/other-tasks.json
+++ b/src/main/resources/static/other-tasks.json
@@ -7,6 +7,6 @@
   {
     "name": "Document cleanup progress and take before/after photos",
     "author_id": 1,
-    "assignee_id": 3
+    "assignee_id": null
   }
 ]
