Adding security and passing tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,15 @@ spring.datasource.username=admin
 spring.datasource.password=1234!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+# Enable file logging
+logging.file.name=logs/cleanup-app.log
+# Set log levels
+logging.level.com.app.cleanup=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+# Log pattern (optional)
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+# Maximum file size before rolling over
+logging.logback.rollingpolicy.max-file-size=10MB
+# Keep log files for 30 days
+logging.logback.rollingpolicy.max-history=30
